--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ url = "/project"
 name = "Blog"
 url = "/post"
 [[menu.main]]
-name = "Categoriess"
+name = "Categories"
 url = "/categories"
 
 # If using the giscus commenting system
